Fix Button Z-Index

--- a/frontend/src/components/VideoCall/style.scss
+++ b/frontend/src/components/VideoCall/style.scss
@@ -32,6 +32,7 @@
   }
 
   .microphone-button {
+    z-index: 1;
     cursor: pointer;
     position: absolute;
     width: 40px;
@@ -120,6 +121,7 @@
   }
 
   .video-button {
+    z-index: 1;
     cursor: pointer;
     position: absolute;
     width: 40px;
@@ -166,6 +168,7 @@
     }
 
     .video-button {
+      z-index: 1;
       cursor: pointer;
       position: absolute;
       width: 40px;
